radio adaptar + factory

--- a/web/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/web/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -31,6 +31,10 @@
 
 @mixin mytheme {
   @include valo;
+  
+  .v-select-optiongroup {
+  	    display: -webkit-inline-box;
+  }
+  
 
-  // Insert your own theme rules here
 }
